--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   permission_handler: ^11.3.1
   injectable: ^2.4.4
   injectable_generator: ^2.6.2
+  google_ml_kit: ^0.18.1
+  google_mlkit_face_detection: ^0.11.1
+  google_mlkit_commons: ^0.8.1
+  google_mlkit_face_mesh_detection: ^0.2.1
+  face_camera: ^0.1.2
 
 dev_dependencies:
   flutter_test:
