--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   google_mlkit_commons: ^0.8.1
   google_mlkit_face_mesh_detection: ^0.2.1
   face_camera: ^0.1.2
+  google_ml_barcode: ^0.7.6
+  image: ^4.2.0
+  tflite_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
