--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_ml_barcode: ^0.7.6
   image: ^4.2.0
   tflite_flutter: ^0.11.0
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
