--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image: ^4.2.0
   tflite_flutter: ^0.11.0
   firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.3
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
